@@ -1,1 +1,1 @@
-DIST noscript-2.6.9.33.xpi 548866 SHA256 f8c890fecc3373a311f06eacb8c87f2006cca0cf01eacc92921ce1571de65018 SHA512 72ee4bbc45b7fe4edb552dfbcf9b6c510c32980fcb501f065cabaf70f8f8906c377422f51e80303c0b43eed1ef1d7cb8ac5fcff91f4b38fa9204bc18804191bb WHIRLPOOL 79c3a667ead7b8b97651c6b88fe8d2679c467b7243016725453849aafdc2ce12908b912de7568e0c68d67ae79d55657e2e4605f1e929cd1873ca57d9f140d060
+DIST noscript-2.6.9.34.xpi 548893 SHA256 32d79e8df0348a0cd26a84eaed1d8fb4daad5eeface2949f815eda7576eee3e3 SHA512 9e83d28d6f2d4b8b87549dbdc14ab9465e3ede7881865be917b38fd38a3ff61a61de61973dba0cd99a90f30a3355bb72174c92756c7f659a067dc4867ab2e31a WHIRLPOOL 7f156764ab4e7338dc0c876fccfd6d5f6b7b28f1184aff469ea7841ebcaa9122e7f3871b72f1e251edbbd1343769d2cbc1c4bf6735b03e114c25af9427eef343
