@@ -2,7 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-*noscript-2.6.9.33 (33 Jul 2015)
+*noscript-2.6.9.34 (05 Aug 2015)
+
+  05 Aug 2015; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
+*noscript-2.6.9.33 (31 Jul 2015)
 
   31 Jul 2015; Martin Väth <martin@mvath.de>:
   Version bump, remove old ebuild
